robust permissions model and parser created with access denial as part of middleware - todo, enforce 'own' where appropriate
