# src/routes/api.js
@@ -24,23 +24,23 @@ router.get('/health', m.health);
 // todo access... owner and client?
 router.post('/group', [m.schemaCheck], group.write);
 
-router.get('/group', [
+router.get('/groups', [
 	m.isAuthenticated,
 	m.permissions,
-	m.access()
+	m.access,
 ], group.get);
 router.get('/group/:id', [
 	m.validateAuthGroup,
 	m.isAuthenticated,
 	m.permissions,
-	m.access('o')
+	m.access,
 ], group.getOne);
 router.patch('/group/:id', [
 	m.schemaCheck,
 	m.validateAuthGroup,
 	m.isAuthenticated,
 	m.permissions,
-	m.access('o')
+	m.access,
 ], group.patch);
 
 // Auth Group Functional
@@ -55,42 +55,42 @@ router.post('/:group/account', [
 	m.isIatGroupActivationAuthorized,
 	m.captureAuthGroupInBody
 ], account.writeAccount);
-router.get('/:group/account', [
+router.get('/:group/accounts', [
 	m.validateAuthGroup,
 	m.isAuthenticated,
 	m.permissions,
-	m.access('o')
+	m.access,
 ], account.getAccounts);
 router.get('/:group/account/:id', [
 	m.validateAuthGroup,
 	m.isAuthenticated,
 	m.permissions,
-	m.access(['o', 'm']) //todo - restrict member to own
+	m.access //todo - restrict member to own
 ], account.getAccount);
 router.patch('/:group/account/:id', [
 	m.validateAuthGroup,
 	m.isAuthenticated,
 	m.schemaCheck,
 	m.permissions,
-	m.access(['o']) //todo - restrict member to own
+	m.access //todo - restrict member to own
 ], account.patchAccount);
 router.delete('/:group/account/:id', [
 	m.validateAuthGroup,
 	m.isAuthenticated,
 	m.permissions,
-	m.access('o') //todo - restrict member to own
+	m.access //todo - restrict member to own
 ], account.deleteAccount);
 
 // Clients
 // todo - allow client_credential when from the client in question - this can be another role 'c'
-router.get('/:group/client', [m.validateAuthGroup, m.isAuthenticated, m.permissions, m.access(['o','m'])], client.get);
-router.get('/:group/client/:id', [m.validateAuthGroup, m.isAuthenticated, m.permissions, m.access(['o','m'])], client.getOne);
-router.patch('/:group/client/:id', [m.validateAuthGroup, m.isAuthenticated, m.schemaCheck, m.permissions, m.access(['o'])], client.patchOne);
-router.delete('/:group/client/:id', [m.validateAuthGroup, m.isAuthenticated, m.permissions, m.access('o')], client.deleteOne);
+router.get('/:group/clients', [m.validateAuthGroup, m.isAuthenticated, m.permissions, m.access], client.get);
+router.get('/:group/client/:id', [m.validateAuthGroup, m.isAuthenticated, m.permissions, m.access], client.getOne);
+router.patch('/:group/client/:id', [m.validateAuthGroup, m.isAuthenticated, m.schemaCheck, m.permissions, m.access], client.patchOne);
+router.delete('/:group/client/:id', [m.validateAuthGroup, m.isAuthenticated, m.permissions, m.access], client.deleteOne);
 
 // Operations
 //todo - client as well 'c'
-router.post('/:group/operations/client/:id', [m.validateAuthGroup, m.isAuthenticated, m.schemaCheck, m.permissions, m.access('o')], client.clientOperations);
-router.post('/:group/operations', [m.validateAuthGroup, m.isAuthenticated, m.schemaCheck, m.permissions, m.access('o')], group.operations);
+router.post('/:group/operations/client/:id', [m.validateAuthGroup, m.isAuthenticated, m.schemaCheck, m.permissions, m.access], client.clientOperations);
+router.post('/:group/operations', [m.validateAuthGroup, m.isAuthenticated, m.schemaCheck, m.permissions, m.access], group.operations);
 
 module.exports = router;
